Switch to JDK 25